[package]
name = "loptos"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

[package.metadata.configure_me]
spec = "config_spec.toml"

[features]
test_paths = []
payjoin_client = ["bitcoincore-rpc", "reqwest"]

[dependencies]
bitcoin = { version = "0.28.1", features = ["use-serde"] }
bip78 = { git = "https://github.com/dangould/rust-payjoin", branch = "receive-logic-v3", features = ["sender", "receiver" ] }
url = "2.2.2"
hyper = "0.14.9"
tonic_lnd = "0.4.0"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
rand = "0.8.4"
base64 = "0.13.0"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
ln-types = { version = "0.1.3", features = ["serde", "parse_arg"] }
configure_me = "0.4.0"

# Optional dependencies
bitcoincore-rpc = { version = "0.15.0", optional = true }
reqwest = { version = "0.11.4", features = ["blocking"], optional = true }

[build-dependencies]
configure_me_codegen = "0.4.1"

[[bin]]
name = "loin"

[[bin]]
name = "payjoin-client"
required-features = ["payjoin_client"]
