[package]
name = "nolooking"
version = "0.1.0"
authors = ["Dan Gould <d@ngould.dev>", "Martin Habovstiak <martin.habovstiak@gmail.com>"]
exclude = ["./tests/compose"]
edition = "2018"

[package.metadata.configure_me]
spec = "config_spec.toml"

[features]
test_paths = []

[dependencies]
bitcoin = { version = "0.28.1", features = ["use-serde"] }
bip78 = { git = "https://github.com/dangould/rust-payjoin", rev = "8d9b7d6", features = ["sender", "receiver" ] }
url = "2.2.2"
hyper = "0.14.9"
hyper-tls = "0.5.0"
tonic_lnd = "0.4.0"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
rand = "0.8.4"
base64 = "0.13.0"
serde = "1.0.126"
serde_qs = "0.10.1"
serde_derive = "1.0.126"
serde_json = "1.0.87"
ln-types = { version = "0.1.3", features = ["serde", "parse_arg"] }
configure_me = "0.4.0"
qrcode-generator = "4.1.6"

[build-dependencies]
configure_me_codegen = "0.4.1"

[dev-dependencies]
bitcoincore-rpc = "0.15.0"
rcgen =  "0.10.0"
tempfile = "3"
tonic = "0.6.2"
hyper = { version = "0.14.9", features = ["full"] }
tokio-native-tls = "0.3"

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
secp256k1 = { opt-level = 2 }
secp256k1-sys = { opt-level = 2 }
rand_core = { opt-level = 2 }
byteorder = { opt-level = 2 }
